--- a/src/Duelyst/css/css3.css
+++ b/src/Duelyst/css/css3.css
@@ -87,7 +87,28 @@
     -fx-background-radius: 15 15 15 15;
 
 }
+#boxBoughtStyle {
 
+    -fx-border-width: 2, 1;
+    -fx-border-style: solid;
+    -fx-border-color: #4bb639;
+    -fx-border-insets: 2 2 2 2;
+    -fx-border-radius: 15 15 15 15;
+    -fx-background-color: rgba(0, 0, 0, 0.4);
+    -fx-background-radius: 15 15 15 15;
+
+}
+#boxPendingBoughtStyle {
+
+    -fx-border-width: 2, 1;
+    -fx-border-style: solid;
+    -fx-border-color: #f5e83d;
+    -fx-border-insets: 2 2 2 2;
+    -fx-border-radius: 15 15 15 15;
+    -fx-background-color: rgba(0, 0, 0, 0.4);
+    -fx-background-radius: 15 15 15 15;
+
+}
 .scroll-bar:horizontal .track,
 .scroll-bar:vertical .track {
     -fx-background-color: transparent;
@@ -99,16 +120,18 @@
 
 .scroll-bar:horizontal .increment-button,
 .scroll-bar:horizontal .decrement-button {
-    -fx-background-color: transparent;
+    -fx-background-color: rgba(0, 0, 0, 0.4);
+    -fx-border-color: rgba(0, 0, 0, 0.4);
     -fx-background-radius: 5 5 5 5;
-
+    -fx-border-radius: 5 5 5 5;
 }
 
 .scroll-bar:vertical .increment-button,
 .scroll-bar:vertical .decrement-button {
-    -fx-background-color: transparent;
+    -fx-background-color: rgba(0, 0, 0, 0.4);
+    -fx-border-color: rgba(0, 0, 0, 0.4);
     -fx-background-radius: 5 5 5 5;
-
+    -fx-border-radius: 5 5 5 5;
 
 }
 
@@ -117,6 +140,7 @@
     -fx-background-color: derive(black, 90.0%);
     -fx-background-insets: 2.0, 0.0, 0.0;
     -fx-background-radius: 5 5 5 5;
+
 }
 
 .scroll-bar:horizontal .thumb:hover,
