--- a/src/Duelyst/css/css3.css
+++ b/src/Duelyst/css/css3.css
@@ -70,8 +70,8 @@
 
 
 .label {
-    -fx-text-fill: #000000;
-    -fx-font-size: 15pt;
+    -fx-text-fill: #ffffff;
+    -fx-font-size: 12pt;
     -fx-font-family: Crushed;
 
 }
