--- a/src/Duelyst/Controller/collectionMenu.fxml
+++ b/src/Duelyst/Controller/collectionMenu.fxml
@@ -14,12 +14,15 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.control.ComboBox?>
 <StackPane fx:id="stackPane" fx:controller="Duelyst.Controller.CollectionController"
            xmlns="http://javafx.com/javafx/8.0.181"
            xmlns:fx="http://javafx.com/fxml/1">
     <GridPane fx:id="gridPane" prefHeight="400.0" prefWidth="600.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="551.0" minWidth="10.0" prefWidth="104.0"/>
+            <ColumnConstraints hgrow="SOMETIMES"/>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="551.0" minWidth="10.0" prefWidth="95.0"/>
             <ColumnConstraints hgrow="SOMETIMES"/>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="551.0" minWidth="10.0" prefWidth="95.0"/>
         </columnConstraints>
@@ -29,6 +32,21 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
         </rowConstraints>
         <children>
+            <Button  GridPane.halignment="CENTER" GridPane.valignment="CENTER" id="button1" mnemonicParsing="false" onMouseClicked="#showHeroes"
+                     onMouseEntered="#heroesBtnActFocus" GridPane.columnIndex="1" GridPane.rowIndex="2"
+                     onKeyPressed="#handleOnKeyPressedHeroes" prefHeight="90.0" prefWidth="90.0">
+                <GridPane.margin>
+                    <Insets left="10.0" right="10.0"/>
+                </GridPane.margin>
+                <graphic>
+                    <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                            <Image url="Duelyst/css/heroWhite.png"/>
+                        </image>
+                    </ImageView>
+                </graphic>
+            </Button>
+
             <ScrollPane fx:id="heroes" prefWidth="605.0" GridPane.columnIndex="1"
                         GridPane.rowIndex="1">
                 <content>
@@ -322,8 +340,7 @@
                 <children>
                     <Button fx:id="button1" id="button1" mnemonicParsing="false" onMouseClicked="#showHeroes"
                             onMouseEntered="#heroesBtnActFocus"
-                            onKeyPressed="#handleOnKeyPressedHeroes" prefHeight="50.0" prefWidth="300.0"
-                            text="HEROES">
+                            onKeyPressed="#handleOnKeyPressedHeroes" prefHeight="50.0" prefWidth="300.0">
                         <GridPane.margin>
                             <Insets left="10.0" right="10.0"/>
                         </GridPane.margin>
@@ -338,7 +355,7 @@
                     <Button fx:id="button2" id="button2" mnemonicParsing="false" onMouseEntered="#minionsBtnActFocus"
                             onKeyPressed="#handleOnKeyPressedMinions" onMouseClicked="#showMinions" prefHeight="50.0"
                             prefWidth="300.0"
-                            text="MINIONS" GridPane.columnIndex="1">
+                            GridPane.columnIndex="1">
                         <GridPane.margin>
                             <Insets left="10.0" right="10.0"/>
                         </GridPane.margin>
@@ -353,7 +370,7 @@
                     <Button fx:id="button3" id="button3" mnemonicParsing="false" onMouseEntered="#spellsBtnActFocus"
                             onKeyPressed="#handleOnKeyPressedSpells" onMouseClicked="#showSpells" prefHeight="50.0"
                             prefWidth="300.0"
-                            text="SPELLS" GridPane.columnIndex="2">
+                            GridPane.columnIndex="2">
                         <GridPane.margin>
                             <Insets left="10.0" right="10.0"/>
                         </GridPane.margin>
@@ -368,7 +385,7 @@
                     <Button fx:id="button4" id="button4" mnemonicParsing="false" onMouseEntered="#itemsBtnActFocus"
                             onKeyPressed="#handleOnKeyPressedItems" onMouseClicked="#showItems" prefHeight="50.0"
                             prefWidth="300.0"
-                            text="ITEMS" GridPane.columnIndex="3">
+                            GridPane.columnIndex="3">
                         <GridPane.margin>
                             <Insets left="10.0" right="10.0"/>
                         </GridPane.margin>
@@ -382,65 +399,106 @@
                     </Button>
                 </children>
             </GridPane>
-            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <GridPane GridPane.columnIndex="3">
                 <columnConstraints>
                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="200.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="200.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="200.0"/>
                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
                 </columnConstraints>
                 <rowConstraints>
                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                 </rowConstraints>
                 <children>
-                    <Button fx:id="button5" id="button5" mnemonicParsing="false" onMouseEntered="#buyBtnActFocus"
-                            onKeyPressed="#handleOnKeyPressedBuy" onMouseClicked="#buyBtnAct" prefHeight="50.0"
-                            prefWidth="400.0"
-                            text="BUY" GridPane.columnIndex="1">
+                    <ComboBox prefHeight="50.0" prefWidth="300.0" GridPane.columnIndex="1"/>
+                    <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="300.0" text="Button"/>
+                </children>
+            </GridPane>
+            <GridPane GridPane.columnIndex="3" GridPane.rowIndex="2">
+                <columnConstraints>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                </columnConstraints>
+                <rowConstraints>
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                </rowConstraints>
+                <children>
+                    <Button  id="button1" mnemonicParsing="false" onMouseClicked="#showHeroes"
+                            onMouseEntered="#heroesBtnActFocus"
+                            onKeyPressed="#handleOnKeyPressedHeroes" prefHeight="50.0" prefWidth="300.0">
                         <GridPane.margin>
                             <Insets left="10.0" right="10.0"/>
                         </GridPane.margin>
                         <graphic>
                             <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                                 <image>
-                                    <Image url="Duelyst/css/buyWhite.png"/>
+                                    <Image url="Duelyst/css/heroWhite.png"/>
                                 </image>
                             </ImageView>
                         </graphic>
                     </Button>
-                    <Button fx:id="button6" id="button6" mnemonicParsing="false" onMouseEntered="#sellBtnActFocus"
-                            onKeyPressed="#handleOnKeyPressedSell" onMouseClicked="#sellBtnAct" prefHeight="50.0"
-                            prefWidth="400.0"
-                            text="SELL" GridPane.columnIndex="2">
+                    <Button  id="button2" mnemonicParsing="false" onMouseEntered="#minionsBtnActFocus"
+                            onKeyPressed="#handleOnKeyPressedMinions" onMouseClicked="#showMinions" prefHeight="50.0"
+                            prefWidth="300.0"
+                            GridPane.columnIndex="1">
                         <GridPane.margin>
                             <Insets left="10.0" right="10.0"/>
                         </GridPane.margin>
                         <graphic>
                             <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                                 <image>
-                                    <Image url="Duelyst/css/sellWhite.png"/>
+                                    <Image url="Duelyst/css/minionWhite.png"/>
                                 </image>
                             </ImageView>
                         </graphic>
                     </Button>
-                    <Button fx:id="button7" id="button7" mnemonicParsing="false" onMouseEntered="#mainMenuBtnActFocus"
-                            onKeyPressed="#handleOnKeyPressedMainMenu" onMouseClicked="#mainMenuAct" prefHeight="50.0"
-                            prefWidth="400.0"
-                            text="MAIN MENU" GridPane.columnIndex="3">
+                    <Button  id="button3" mnemonicParsing="false" onMouseEntered="#spellsBtnActFocus"
+                            onKeyPressed="#handleOnKeyPressedSpells" onMouseClicked="#showSpells" prefHeight="50.0"
+                            prefWidth="300.0"
+                            GridPane.columnIndex="2">
                         <GridPane.margin>
                             <Insets left="10.0" right="10.0"/>
                         </GridPane.margin>
                         <graphic>
                             <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                                 <image>
-                                    <Image url="Duelyst/css/mainMenuWhite.png"/>
+                                    <Image url="Duelyst/css/spellWhite.png"/>
                                 </image>
                             </ImageView>
                         </graphic>
                     </Button>
                 </children>
             </GridPane>
+            <ScrollPane prefWidth="500.0" GridPane.columnIndex="3" GridPane.rowIndex="1">
+                <content>
+                    <AnchorPane>
+                        <children>
+                            <VBox>
+                                <children>
+                                    <HBox id="boxNotBoughtStyle">
+                                        <children>
+                                            <CheckBox alignment="CENTER" mnemonicParsing="false">
+                                                <HBox.margin>
+                                                    <Insets top="40.0" left="20"/>
+                                                </HBox.margin>
+                                            </CheckBox>
+                                            <ImageView fitHeight="200.0" pickOnBounds="true" preserveRatio="true">
+                                                <image>
+                                                    <Image url="Duelyst/css/abc.jpg"/>
+                                                </image>
+                                            </ImageView>
+                                            <Label id="label-deck" text="ARASH">
+                                                <HBox.margin>
+                                                    <Insets left="20.0" right="20.0" top="70.0"/>
+                                                </HBox.margin>
+                                            </Label>
+                                        </children>
+                                    </HBox>
+                                </children>
+                            </VBox>
+                        </children>
+                    </AnchorPane>
+                </content>
+            </ScrollPane>
             <ScrollPane fx:id="minions" layoutX="46.0" layoutY="74.0" prefWidth="605.0" visible="false"
                         GridPane.columnIndex="1" GridPane.rowIndex="1">
                 <content>
