dialog error of sell finished

--- a/src/Duelyst/css/css3.css
+++ b/src/Duelyst/css/css3.css
@@ -24,7 +24,7 @@
     -fx-border-width: 0;
     -fx-background-color: rgba(0, 0, 0, 0.4);
     -fx-text-fill: #ffffff;
-    -fx-font-size: 24pt;
+    -fx-font-size: 20pt;
     -fx-font-family: Crushed;
     -fx-background-insets: 2 2 2 2;
     -fx-background-radius: 15 15 15 15;
@@ -83,6 +83,24 @@
 
 }
 
+.dialog-button {
+    -fx-border-color: transparent;
+    -fx-border-width: 0;
+    -fx-background-color: rgba(0, 0, 0, 0.4);
+    -fx-text-fill: #ffffff;
+    -fx-font-size: 20pt;
+    -fx-font-family: Crushed;
+    -fx-background-insets: 2 2 2 2;
+    -fx-background-radius: 15 15 15 15;
+}
+.dialog-button:hover {
+    -fx-background-color: rgba(13, 254, 221, 0.8);
+    -fx-text-fill: black;
+    -fx-border-width: 1, 1;
+    -fx-border-style: solid;
+    -fx-border-insets: 2 2 2 2;
+    -fx-border-radius: 15 15 15 15;
+}
 #boxNotBoughtStyle {
 
     -fx-border-width: 2, 1;
