--- a/src/Duelyst/Controller/collectionMenu.fxml
+++ b/src/Duelyst/Controller/collectionMenu.fxml
@@ -32,35 +32,47 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
         </rowConstraints>
         <children>
-            <Button fx:id="addButton" GridPane.halignment="CENTER" GridPane.valignment="CENTER" id="button-add" mnemonicParsing="false" onMouseClicked="#addBtnAct"
-                     onMouseEntered="#addBtnActFocus" GridPane.columnIndex="1" GridPane.rowIndex="2"
-                     onKeyPressed="#handleOnKeyPressedAdd" prefHeight="90.0" prefWidth="90.0">
-                <GridPane.margin>
-                    <Insets left="10.0" right="10.0"/>
-                </GridPane.margin>
-                <graphic>
-                    <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
-                        <image>
-                            <Image url="Duelyst/css/addWhite.png"/>
-                        </image>
-                    </ImageView>
-                </graphic>
-            </Button>
-            <Button fx:id="mainMenuButton" GridPane.halignment="CENTER" GridPane.valignment="CENTER" id="button-mainmenu" mnemonicParsing="false" onMouseClicked="#mainMenuAct"
-                    onMouseEntered="#mainMenuBtnActFocus" GridPane.columnIndex="1" GridPane.rowIndex="2"
-                    onKeyPressed="#handleOnKeyPressedMainMenu" prefHeight="90.0" prefWidth="90.0">
-                <GridPane.margin>
-                    <Insets left="10.0" right="10.0"/>
-                </GridPane.margin>
-                <graphic>
-                    <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
-                        <image>
-                            <Image url="Duelyst/css/mainMenuWhite.png"/>
-                        </image>
-                    </ImageView>
-                </graphic>
-            </Button>
-
+            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="2">
+                <columnConstraints>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                </columnConstraints>
+                <rowConstraints>
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                </rowConstraints>
+                <children>
+                    <Button fx:id="addButton" GridPane.halignment="CENTER" GridPane.valignment="CENTER" id="button-add"
+                            mnemonicParsing="false" onMouseClicked="#addBtnAct"
+                            onMouseEntered="#addBtnActFocus" GridPane.columnIndex="1"
+                            onKeyPressed="#handleOnKeyPressedAdd" prefHeight="90.0" prefWidth="90.0">
+                        <GridPane.margin>
+                            <Insets left="10.0" right="10.0"/>
+                        </GridPane.margin>
+                        <graphic>
+                            <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                                <image>
+                                    <Image url="Duelyst/css/addWhite.png"/>
+                                </image>
+                            </ImageView>
+                        </graphic>
+                    </Button>
+                    <Button fx:id="mainMenuButton" GridPane.halignment="CENTER" GridPane.valignment="CENTER"
+                            id="button-mainmenu" mnemonicParsing="false" onMouseClicked="#mainMenuAct"
+                            onMouseEntered="#mainMenuBtnActFocus" GridPane.columnIndex="0"
+                            onKeyPressed="#handleOnKeyPressedMainMenu" prefHeight="90.0" prefWidth="90.0">
+                        <GridPane.margin>
+                            <Insets left="10.0" right="10.0"/>
+                        </GridPane.margin>
+                        <graphic>
+                            <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                                <image>
+                                    <Image url="Duelyst/css/mainMenuWhite.png"/>
+                                </image>
+                            </ImageView>
+                        </graphic>
+                    </Button>
+                </children>
+            </GridPane>
             <ScrollPane fx:id="heroes" prefWidth="605.0" GridPane.columnIndex="1"
                         GridPane.rowIndex="1">
                 <content>
@@ -422,7 +434,7 @@
                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                 </rowConstraints>
                 <children>
-                    <ComboBox prefHeight="50.0" prefWidth="300.0" GridPane.columnIndex="1"/>
+                    <ComboBox fx:id="deckList" prefHeight="50.0" prefWidth="300.0" GridPane.columnIndex="1"/>
                     <Button fx:id="setMainButton" mnemonicParsing="false" onMouseEntered="#setMainBtnActFocus"
                             onKeyPressed="#handleOnKeyPressedSetMain" onMouseClicked="#setMainBtnAct" prefHeight="50.0"
                             prefWidth="300.0"
@@ -450,7 +462,8 @@
                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                 </rowConstraints>
                 <children>
-                    <Button fx:id="deleteButton" id="delete-button" mnemonicParsing="false" onMouseClicked="#deleteBtnAct"
+                    <Button fx:id="deleteButton" id="delete-button" mnemonicParsing="false"
+                            onMouseClicked="#deleteBtnAct"
                             onMouseEntered="#deleteBtnActFocus"
                             onKeyPressed="#handleOnKeyPressedDelete" prefHeight="50.0" prefWidth="300.0">
                         <GridPane.margin>
@@ -464,7 +477,8 @@
                             </ImageView>
                         </graphic>
                     </Button>
-                    <Button fx:id="createButton" id="create-button" mnemonicParsing="false" onMouseEntered="#createBtnActFocus"
+                    <Button fx:id="createButton" id="create-button" mnemonicParsing="false"
+                            onMouseEntered="#createBtnActFocus"
                             onKeyPressed="#handleOnKeyPressedCreate" onMouseClicked="#createBtnAct" prefHeight="50.0"
                             prefWidth="300.0"
                             GridPane.columnIndex="1">
@@ -479,7 +493,8 @@
                             </ImageView>
                         </graphic>
                     </Button>
-                    <Button fx:id="crossButton" id="cross-button" mnemonicParsing="false" onMouseEntered="#crossBtnActFocus"
+                    <Button fx:id="crossButton" id="cross-button" mnemonicParsing="false"
+                            onMouseEntered="#crossBtnActFocus"
                             onKeyPressed="#handleOnKeyPressedCross" onMouseClicked="#crossBtnAct" prefHeight="50.0"
                             prefWidth="300.0"
                             GridPane.columnIndex="2">
@@ -500,9 +515,9 @@
                 <content>
                     <AnchorPane>
                         <children>
-                            <VBox>
+                            <VBox fx:id="deckBox">
                                 <children>
-                                    <HBox id="boxNotBoughtStyle">
+                                    <!--<HBox id="boxNotBoughtStyle">
                                         <children>
                                             <CheckBox alignment="CENTER" mnemonicParsing="false">
                                                 <HBox.margin>
@@ -520,7 +535,7 @@
                                                 </HBox.margin>
                                             </Label>
                                         </children>
-                                    </HBox>
+                                    </HBox>-->
                                 </children>
                             </VBox>
                         </children>
