--- a/src/Duelyst/Controller/collectionMenu.fxml
+++ b/src/Duelyst/Controller/collectionMenu.fxml
@@ -427,18 +427,18 @@
             </GridPane>
             <GridPane GridPane.columnIndex="3">
                 <columnConstraints>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
                 </columnConstraints>
                 <rowConstraints>
-                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                    <RowConstraints minHeight="10.0"  vgrow="SOMETIMES"/>
                 </rowConstraints>
                 <children>
-                    <ComboBox fx:id="deckList" prefHeight="50.0" prefWidth="300.0" GridPane.columnIndex="1"/>
+                    <ComboBox fx:id="deckList" prefHeight="70.0"   GridPane.columnIndex="1" />
                     <Button fx:id="setMainButton" mnemonicParsing="false" onMouseEntered="#setMainBtnActFocus"
-                            onKeyPressed="#handleOnKeyPressedSetMain" onMouseClicked="#setMainBtnAct" prefHeight="50.0"
-                            prefWidth="300.0"
-                            GridPane.columnIndex="3" text="SET AS MAIN DECK" style="-fx-font-size: 25px">
+                            onKeyPressed="#handleOnKeyPressedSetMain" onMouseClicked="#setMainBtnAct" prefHeight="70.0"
+
+                            GridPane.columnIndex="0" text="SET AS MAIN DECK" style="-fx-font-size: 20px">
                         <GridPane.margin>
                             <Insets left="10.0" right="10.0"/>
                         </GridPane.margin>
@@ -1669,7 +1669,7 @@
 
                                           prefWidth="100.0">
                                         <children>
-                                            <CheckBox fx:id="spell2" onMouseClicked="#spell1CheckBox"
+                                            <CheckBox fx:id="spell2" onMouseClicked="#spell2CheckBox"
                                                       mnemonicParsing="false"
                                                       textAlignment="CENTER">
                                                 <padding>
@@ -1949,7 +1949,7 @@
 
                                           prefWidth="100.0">
                                         <children>
-                                            <CheckBox fx:id="spell12" onMouseClicked="#spell11CheckBox"
+                                            <CheckBox fx:id="spell12" onMouseClicked="#spell12CheckBox"
                                                       mnemonicParsing="false"
                                                       textAlignment="CENTER">
                                                 <padding>
