--- a/src/Duelyst/css/css4.css
+++ b/src/Duelyst/css/css4.css
@@ -10,6 +10,16 @@
     -fx-background-size: stretch;
 }
 
+#text {
+    -fx-text-fill: black;
+    -fx-font-size: 20pt;
+    -fx-font-family: Crushed;
+    -fx-border-radius: 15 15 15 15;
+    -fx-prompt-text-fill: black;
+    -fx-text-alignment: center;
+    -fx-background-radius: 15 15 15 15;
+
+}
 .scroll-pane > .viewport {
     -fx-background-color: transparent;
 }
@@ -36,9 +46,6 @@
     -fx-text-fill: black;
     -fx-border-width: 1, 1;
     -fx-border-style: solid;
-    -fx-border-insets: 2 2 2 2;
-    -fx-border-radius: 15 15 15 15;
-
 }
 
 #button1:focused {
@@ -72,11 +79,77 @@
 #cross-button:focused {
     -fx-graphic: url("crossBlack.png");
 }
+
 #button-mainmenu:focused {
     -fx-graphic: url("mainMenuBlack.png");
 }
 
+.combo-box {
+    -fx-background-color: rgba(0, 0, 0, 0.4);
+    -fx-text-fill: #ffffff;
+    -fx-font-size: 20px;
+    -fx-prompt-text-fill: #ffffff;
+    -fx-background-insets: 2 2 2 2;
+    -fx-background-radius: 15 15 15 15;
 
+    -fx-border-insets: 2 2 2 2;
+    -fx-border-radius: 15 15 15 15;
+}
+/*
+.combo-box-popup .list-view .list-cell {
+    -fx-background-color: rgba(0, 0, 0, 0.4);
+    -fx-text-fill: #ffffff;;
+    -fx-font-size: 20px;
+    -fx-background-insets: 2 2 2 2;
+    -fx-background-radius: 15 15 15 15;
+    -fx-border-insets: 2 2 2 2;
+    -fx-border-radius: 15 15 15 15;
+}*/
+
+.combo-box .list-cell {
+    -fx-background-color: rgba(0, 0, 0, 0);
+    -fx-text-fill: #ffffff;;
+    -fx-font-size: 20px;
+
+
+    -fx-background-insets: 2 2 2 2;
+    -fx-background-radius: 15 15 15 15;
+    -fx-border-insets: 2 2 2 2;
+    -fx-border-radius: 15 15 15 15;
+}
+
+.combo-box-popup > .list-view {
+    -fx-background-color: rgba(0, 0, 0, 0.4);
+    -fx-text-fill: #ffffff;;
+    -fx-font-size: 20px;
+    -fx-background-insets: 2 2 2 2;
+    -fx-background-radius: 15 15 15 15;
+    -fx-border-insets: 2 2 2 2;
+    -fx-border-radius: 15 15 15 15;
+}
+
+.combo-box-base {
+    -fx-background-color: rgba(0, 0, 0, 0.4);
+    -fx-text-fill: #ffffff;;
+    -fx-font-size: 20px;
+    -fx-background-insets: 2 2 2 2;
+    -fx-background-radius: 15 15 15 15;
+    -fx-border-insets: 2 2 2 2;
+    -fx-border-radius: 15 15 15 15;
+}
+
+#wrongPassword {
+    -fx-text-fill: black;
+    -fx-font-size: 20pt;
+    -fx-font-family: Crushed;
+    -fx-border-radius: 15 15 15 15;
+    -fx-prompt-text-fill: black;
+    -fx-text-alignment: center;
+    -fx-background-radius: 15 15 15 15;
+    -fx-background-image: url('wrong.png');
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: right center;
+}
 .button:pressed {
     -fx-background-color: rgba(187, 64, 27, 0.8);
     -fx-translate-y: 4px;
