--- a/src/Duelyst/css/css4.css
+++ b/src/Duelyst/css/css4.css
@@ -95,7 +95,9 @@
     -fx-border-insets: 2 2 2 2;
     -fx-border-radius: 15 15 15 15;
 }
+
 /*
+
 .combo-box-popup .list-view .list-cell {
     -fx-background-color: rgba(0, 0, 0, 0.4);
     -fx-text-fill: #ffffff;;
@@ -104,7 +106,9 @@
     -fx-background-radius: 15 15 15 15;
     -fx-border-insets: 2 2 2 2;
     -fx-border-radius: 15 15 15 15;
-}*/
+}
+*/
+
 
 .combo-box .list-cell {
     -fx-background-color: rgba(0, 0, 0, 0);
