--- a/src/Duelyst/css/css5.css
+++ b/src/Duelyst/css/css5.css
@@ -44,6 +44,15 @@
 #button3:focused {
     -fx-graphic: url("mainMenuBlack.png");
 }
+#button4:focused {
+    -fx-graphic: url("1Black.png");
+}
+#button5:focused {
+    -fx-graphic: url("2Black.png");
+}
+#button6:focused {
+    -fx-graphic: url("3Black.png");
+}
 
 .button:pressed {
     -fx-background-color: #fea144;
