ready to add map of game

--- a/src/Duelyst/css/css5.css
+++ b/src/Duelyst/css/css5.css
@@ -6,7 +6,7 @@
 .root {
     -fx-font-size: 24pt;
     -fx-font-family: Crushed;
-    -fx-background-image: url("counterplay-games-ff.jpg");
+    -fx-background-image: url("counterplay-games-chapter-13-dawn-of-vetruvians1-1600-logo.jpg");
     -fx-background-size: stretch;
 }
 
@@ -15,7 +15,7 @@
     -fx-border-width: 0;
     -fx-background-color: rgba(0, 0, 0, 0.4);
     -fx-text-fill: #c4c4c4;
-    -fx-font-size: 24pt;
+    -fx-font-size: 20pt;
     -fx-font-family: Crushed;
     -fx-background-insets: 2 2 2 2;
     -fx-background-radius: 15 15 15 15;
@@ -23,7 +23,7 @@
 
 
 .button:focused {
-    -fx-background-color: rgba(254, 161, 68, 1);
+    -fx-background-color: #8F5681;
     -fx-text-fill: black;
     -fx-border-width: 1, 1;
     -fx-border-style: solid;
@@ -55,7 +55,7 @@
 }
 
 .button:pressed {
-    -fx-background-color: #fea144;
+    -fx-background-color: #8F5681;
     -fx-translate-y: 4px;
     -fx-text-fill: black;
 }
