--- a/src/Duelyst/css/css6.css
+++ b/src/Duelyst/css/css6.css
@@ -21,14 +21,7 @@
     -fx-background-radius: 15 15 15 15;
 }
 #tile {
-    -fx-border-color: transparent;
-    -fx-border-width: 0;
-    -fx-background-color: rgba(0, 0, 0, 0.4);
-    -fx-text-fill: #c4c4c4;
-    -fx-font-size: 20pt;
-    -fx-font-family: Crushed;
-    -fx-background-insets: 2 2 2 2;
-    -fx-background-radius: 15 15 15 15;
+    fx-fill: red;
 }
 
 .button:focused {
