--- a/src/Duelyst/css/css6.css
+++ b/src/Duelyst/css/css6.css
@@ -116,3 +116,8 @@
     -fx-border-insets: 2 2 2 2;
     -fx-border-radius: 15 15 15 15;
 }
+#label3 {
+    -fx-font-size: 12pt;
+    -fx-font-family: Crushed;
+    -fx-text-fill: black;
+}
